--- a/react/package.json
+++ b/react/package.json
@@ -8,7 +8,9 @@
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
-        "dev": "nodemon --watch server --verbose server/index.js"
+        "dev": "nodemon --watch server --verbose server/index.js",
+        "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/scss -o src/",
+        "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/scss -o src/ --watch --recursive"
     },
     "repository": {
         "type": "git",
@@ -28,10 +30,17 @@
     },
     "homepage": "https://github.com/1stdibs/front-end-quiz#readme",
     "dependencies": {
+        "cors": "^2.8.4",
         "express": "^4.16.2",
+        "node-sass-chokidar": "^0.0.3",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
-        "react-scripts": "1.1.0"
+        "react-redux": "^5.0.6",
+        "react-router-dom": "^4.2.2",
+        "react-scripts": "1.1.0",
+        "redux": "^3.7.2",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.2.0"
     },
     "devDependencies": {
         "nodemon": "^1.14.11"
